# cse328-pa4

./: .gitignore  README.md
pa4_handout/: README.md
pa4_handout/pa4_template/: CMakeLists.txt  README.md
pa4_handout/pa4_template/etc/: config.txt
pa4_handout/pa4_template/include/shape/: Cube.h  Dodecahedron.h  Ellipsoid.h  Icosahedron.h  Octahedron.h  Shape.h  Tetrahedron.h  Torus.h
pa4_handout/pa4_template/include/util/: Camera.h  Shader.h
pa4_handout/pa4_template/src/: main.cpp
pa4_handout/pa4_template/src/shader/: axis.frag.glsl  axis.vert.glsl
pa4_handout/pa4_template/src/shader/Cone/: ctrl.glsl  eval.glsl  frag.glsl  vert.glsl
pa4_handout/pa4_template/src/shader/Cube/: frag.glsl  vert.glsl
pa4_handout/pa4_template/src/shader/Cylinder/: eval.glsl
pa4_handout/pa4_template/src/shader/Cylinder/Bases/: ctrl.glsl  eval.glsl
pa4_handout/pa4_template/src/shader/Dodecahedron/: vert.glsl
pa4_handout/pa4_template/src/shader/Ellipsoid/: vert.glsl
pa4_handout/pa4_template/src/shader/Icosahedron/: frag.glsl  vert.glsl
pa4_handout/pa4_template/src/shader/Octahedron/: vert.glsl
pa4_handout/pa4_template/src/shader/Sphere/: ctrl.glsl  eval.glsl  vert.glsl
pa4_handout/pa4_template/src/shader/Tetrahedron/: frag.glsl  vert.glsl
pa4_handout/pa4_template/src/shader/Torus/: vert.glsl
